feat: Users API integration Done
